<resources>

    <!--    System strings-->
    <string name="app_name">Amicus Drive</string>
    <string name="title_search"> </string>
    <string name="title_add"> </string>
    <string name="title_my_travel"> </string>
    <string name="title_chat"> </string>
    <string name="title_profile"> </string>
    <string name="Hello">Добро пожаловать \n в Amicus Drive</string>
    <string name="Description">NONE</string>


    <!--    Strings to activity_login-->
    <string name="ENT">АВТОРИЗАЦИЯ</string>
    <string name="Enter">Вход</string>
    <string name="Number">Номер телефона</string>
    <string name="code">Пароль</string>
    <string name="Password">Пароль</string>
    <string name="RePassword">Повтор пароля</string>
    <string name="email">Электронная почта</string>
    <string name="Forget_password">Забыли пароль?</string>
    <string name="Enter_with">ВОЙТИ С ПОМОЩЬЮ</string>
    <string name="Not_account">Вы не имеете аккаунта?</string>
    <string name="Registration">Регистрация</string>


    <!--    Strings to profile_activity-->
    <string name="auto">Настройки \n авто</string>
    <string name="profile">Настройки \n профиля</string>
    <string name="pay">Настройки \n оплаты</string>
    <string name="app">Настройки \n приложения</string>
    <string name="Exit">Выйти</string>


    <!--    Strings to activity_registration-->
    <string name="REG">РЕГИСТРАЦИЯ</string>
    <string name="Account">Уже имеете аккаунт?</string>
    <string name="enter">Вход</string>
    <string name="Continue">Далее</string>
    <string name="Your_name">Ваше имя</string>

    <!--    Strings to confirmation_activity-->
    <string name="CON">ПОДТВЕРЖДЕНИЕ ТЕЛЕФОНА</string>
    <string name="Message">Код был отправлен на ваш телефон через SMS</string>
    <string name="ReSend">Отправить повторно</string>

    <!--    Strings to my_auto_activity-->
    <string name="CAR_SETTING">НАСТРОЙКИ АВТО</string>
    <string name="car_color">Цвет</string>
    <string name="Car_model">Модель машины</string>
    <string name="Car_places">Количество мест</string>
    <string name="Car_number">Номер машины</string>
    <string name="SAVE_Baton">СОХРАНИТЬ</string>
    <string name="DEL_Baton">УДАЛИТЬ</string>
    <string name="add_auto">Добавить авто</string>

    <!--    Strings to app_settings_activity-->
    <string name="APP_SETTING">НАСТРОЙКИ ПРИЛОЖЕНИЯ</string>
    <string name="version">AmicusDrive v1.0</string>
    <string name="language">Язык</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="questions">Вопросы об Amicus Drive</string>
    <string name="clear_cache">Очистить кэш</string>

    <!--    Strings to profile_settings_activity-->
    <string name="PROF_SETTING">НАСТРОЙКИ ПРОФИЛЯ</string>
    <string name="profile_name">Игорь</string>
    <string name="email_name">пошта</string>
    <string name="Notification">Оповещения</string>
    <string name="Notification_description">Для получения сообщений</string>
    <string name="Delete">Удалить аккаунт</string>
    <string name="save">Сохранить</string>
    <string name="zvonok">Позвонить</string>
    <string name="napisat">Написать</string>

    <!--    Strings to profile_settings_activity-->
    <string name="PAY_SETTING">НАСТРОЙКИ ОПЛАТЫ</string>
    <string name="Pay_settings_card_owner">ИГОРЬ ИВАНОВ</string>
    <string name="Pay_settings_card_date">01/23</string>
    <string name="Pay_settings_card_number">4950 45XX XXXX XXXX</string>
    <string name="Pay_settings_add_new_card">Добавить новую карту</string>

    <!--    Strings to chat-->
    <string name="MessageOne">Здравствуйте, а можно \nсойти на площади победы?</string>
    <string name="MessageTwo">Здравствуйте, конечно. \nЦену вдвое снижу</string>
    <string name="MessageThree">Прошу прощения, \nсегодня не смогу поехать</string>
    <string name="MessageFour">Здравствуйте, да</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learning_leaders">Пассажир</string>
    <string name="skill_iq">Водитель</string>

</resources>