<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.amicus.ui.notifications.NotificationsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.amicus.ui.home.HomeFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.amicus.ui.home.HomeFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_my_travel"
        android:name="com.example.amicus.ui.dashboard.DashboardFragment"
        android:label="@string/title_my_travel"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.amicus.ui.notifications.NotificationsFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_notifications" />
</navigation>