<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/card_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/banksystem"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/Description"
            android:src="@drawable/mastercard_logo" />

        <TextView
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/Pay_settings_card_owner"
            android:textColor="@color/dark_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/Pay_settings_card_date"
            android:textColor="@color/dark_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter_regular"
            android:singleLine="true"
            android:text="@string/Pay_settings_card_number"
            android:textColor="@color/dark_grey"
            android:textSize="14sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="15dp"
        android:background="@color/light_gray" />

</LinearLayout>