<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


  <TextView
      android:id="@+id/login_image"
      android:layout_width="wrap_content"
      android:layout_height="70dp"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="56dp"
      android:fontFamily="@font/inter_bold"
      android:text="@string/REG"
      android:textColor="@color/dark_grey"
      android:textSize="20sp" />

  <LinearLayout
      android:id="@+id/login_ll_box"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login_image"
      android:layout_centerHorizontal="true"
      android:orientation="vertical"
      android:paddingTop="24dp"
      android:paddingBottom="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/Your_name"
        android:textColor="@color/dark_grey" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/your_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner"
        android:fontFamily="@font/inter_regular"
        android:paddingBottom="5dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/your_name_textview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/corner"
          android:fontFamily="@font/inter_regular"
          android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/Number"
        android:textColor="@color/dark_grey" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner"
        android:fontFamily="@font/inter_regular"
        android:paddingBottom="5dp">

      <br.com.sapereaude.maskedEditText.MaskedEditText
          android:id="@+id/number_textview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/corner"
          android:fontFamily="@font/inter_regular"
          android:inputType="phone"
          android:textColor="@color/dark_grey"
          android:typeface="monospace"
          app:allowed_chars="1234567890"
          app:keep_hint="true"
          app:mask="+7(###)###-##-##" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/Password"
        android:textColor="@color/dark_grey" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner"
        android:fontFamily="@font/inter_regular"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        app:passwordToggleEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/corner"
          android:fontFamily="@font/inter_regular"
          android:inputType="textPassword">

      </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/RePassword"
        android:textColor="@color/dark_grey" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_et_rewrite"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner"
        android:fontFamily="@font/inter_regular"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        app:passwordToggleEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/corner"
          android:fontFamily="@font/inter_regular"
          android:inputType="textPassword">

      </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_bt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/corner"
        android:fontFamily="@font/inter_bold"
        android:text="@string/Continue"
        android:textSize="22sp" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:gravity="center_horizontal"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/system_gray"
        android:layout_marginBottom="5dp"
        android:text="@string/Account"/>

    <TextView
        android:id="@+id/enter_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:fontFamily="@font/inter_regular"
        android:focusable="true"
        android:textColor="@color/yellow"
        android:text="@string/enter"/>
  </LinearLayout>

</RelativeLayout>