<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/card_fr"
    tools:context=".FragmentPaySetting">


    <LinearLayout
        android:id="@+id/pay_set_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_bt"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:background="@drawable/shadow_back_bt"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/PAY_SETTING"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/Description"
                    android:src="@drawable/mastercard_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Pay_settings_card_owner"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Pay_settings_card_date"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:singleLine="true"
                    android:text="@string/Pay_settings_card_number"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/add_card"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/Description"
                    android:src="@drawable/new_card_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Pay_settings_add_new_card"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:text=""
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />

z                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:text=""
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/light_gray" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>