<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmation_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.ConfirmationActivity">


    <TextView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/CON"
        android:textColor="@color/dark_grey"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/get_message"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_image"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/system_gray"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/Message" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/dark_grey"
            android:fontFamily="@font/inter_regular"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/message_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/light_blue"
                android:inputType="phone"
                android:textSize="40sp"
                android:textAlignment="center"
                android:typeface="monospace"
                app:allowed_chars="1234567890"
                app:mask="#  #  #  #"
                app:keep_hint="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/system_gray"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/ReSend"/>

    </LinearLayout>
</RelativeLayout>